--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,21 @@
   "description": "Element to manage product attributes on the Ordercloud platform",
   "main": "oc-product-attributes.html",
   "dependencies": {
-    "polymer": "Polymer/polymer#^1.4.0"
+    "polymer": "Polymer/polymer#^1.4.0",
+    "oc-core-utils": "git://github.com/oc-elements/oc-core-utils#1.x",
+    "iron-data-table": "1.0.0",
+    "oc-iron-data-table-styles": "git://github.com/oc-elements/oc-iron-data-table-styles.git#1.x",
+    "oc-grid-controls": "git://github.com/oc-elements/oc-grid-controls#1.x",
+    "oc-product-attribute-api": "git://github.com/oc-elements/oc-product-attribute-api#1.x",
+    "paper-icon-button": "PolymerElements/paper-icon-button#^1.1.2",
+    "iron-collapse": "PolymerElements/iron-collapse#^1.0.0",
+    "iron-flex-layout": "PolymerElements/iron-flex-layout#^1.0.0",
+    "iron-form": "PolymerElements/iron-form#^1.0.0",
+    "paper-button": "PolymerElements/paper-button#^1.0.0",
+    "paper-input": "PolymerElements/paper-input#^1.0.0",
+    "paper-material": "PolymerElements/paper-material#^1.0.0",
+    "paper-progress": "PolymerElements/paper-progress#^1.0.0",
+    "paper-toggle-button": "PolymerElements/paper-toggle-button#^1.0.0"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
